* некоторые изменения в контроллерах с сортировкой
