# src/main/java/com/project/devblog/controller/ArticleSearchesController.java
@@ -11,6 +11,7 @@ import lombok.AllArgsConstructor;
 import lombok.NonNull;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.SortDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -30,7 +31,7 @@ public class ArticleSearchesController {
 
     @ResponseStatus(HttpStatus.OK)
     @GetMapping("/searches/articles")
-    public Page<CloseArticleResponse> getByTitleName(@RequestParam(name = "titleContains") String name, Pageable pageable) {
+    public Page<CloseArticleResponse> getByTitleName(@RequestParam(name = "titleContains") String name, @SortDefault(sort = "publicationDate") Pageable pageable) {
         return articleService.getByTitleName(name, pageable)
                 .map(this::toResponse);
     }
