# src/main/java/com/project/devblog/controller/ArticleSortingController.java
@@ -6,18 +6,17 @@ import com.project.devblog.controller.dto.response.TagResponse;
 import com.project.devblog.model.ArticleEntity;
 import com.project.devblog.model.PersonalInfo;
 import com.project.devblog.model.TagEntity;
-import com.project.devblog.model.enums.SortOrder;
-import com.project.devblog.model.enums.SortingParam;
 import com.project.devblog.service.ArticleService;
 import lombok.AllArgsConstructor;
 import lombok.NonNull;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.web.PageableDefault;
+import org.springframework.data.web.SortDefault;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.bind.annotation.RestController;
 
-import javax.validation.Valid;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -31,16 +30,8 @@ public class ArticleSortingController {
 
     @GetMapping("/topic/articles")
     @ResponseStatus(HttpStatus.OK)
-    public Page<CloseArticleResponse> sorting(@NonNull @Valid @RequestParam SortingParam sortingParam,
-                                              @NonNull @Valid @RequestParam SortOrder sortOrder,
-                                              @PageableDefault Pageable pageable) {
-        if (sortingParam == SortingParam.RATING) {
-            return articleService.getSortedListByRating(sortOrder, pageable)
-                    .map(this::toResponse);
-        } else {
-            return articleService.getSortedListByPublicationDate(sortOrder, pageable)
-                    .map(this::toResponse);
-        }
+    public Page<CloseArticleResponse> sorting(@SortDefault(sort = "publicationDate") Pageable pageable) {
+        return articleService.getArticlesBySort(pageable).map(this::toResponse);
     }
 
     @NonNull
