# src/main/java/com/project/devblog/model/enums/SortOrder.java
@@ -1,6 +1,0 @@
-package com.project.devblog.model.enums;
-
-public enum SortOrder {
-    ASCENDING,
-    DESCENDING
-}
